pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-127-fenced_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/127-fenced_code_blocks.md
---

[33m[48;5;236m[K[0m
[33m[48;5;236m```[K[0m
[33m[48;5;236maaa[K[0m
